# smart_enum

./: .gitignore  CMakeLists.txt  README.md  examples.cpp  main.cpp  smart_enum.hpp  tests.cpp  update_boost.bat
examples/: CMakeLists.txt  command_line.cpp
